--- a/hello.html
+++ b/hello.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>hrhrh</title>
-   </head>
+<html>
 <body>
-heelooooo
-
+<h1>My First Heading</h1>
+<p>My first paragraph.</p>
 </body>
 </html>
